Fix vertical alignment on signature box

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -2207,10 +2207,6 @@
     }
   }
 
-  .ui.attached.isSigned:not(.isWarning) .pull-right {
-    padding-top: 5px;
-  }
-
   .ui.attached.isSigned.isVerified {
     border-left: 1px solid #a3c293;
     border-right: 1px solid #a3c293;
